--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  --background: #c0bfbf;
+  --foreground: #2e2e2e;
+  [data-theme="dark"] {
+    --background: #2e2e2e;
+    --foreground: #c0bfbf;
   }
 }
 
@@ -18,6 +15,20 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.inputTheme {
+  box-shadow: 1rem #000;
+  border-width: 0.2px;
+  border-color: gray !important;
+  background-color: #fff !important;
+  color: #1c1212 !important;
+  font-weight: bold;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 1rem;
 }
 
 @layer utilities {
